crates/carta/tests/snapshots/golden_e2e__ipynb__native__attachment.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "figure" , [ "cell" , "markdown" ] , [] )
    [ Para
        [ Str "An"
        , Space
        , Str "embedded"
        , Space
        , Str "attachment:"
        ]
    , Para
        [ Image
            ( "" , [] , [] )
            [ Str "a" , Space , Str "diagram" ]
            ( "figure-diagram.png" , "" )
        ]
    ]
]
