crates/carta/tests/snapshots/golden_e2e__ipynb__native__code-html.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "render"
    , [ "cell" , "code" ]
    , [ ( "execution_count" , "4" ) ]
    )
    [ CodeBlock ( "" , [ "python" ] , [] ) "show_table()"
    , Div
        ( "" , [ "output" , "display_data" ] , [] )
        [ RawBlock
            (Format "html") "<table><tr><td>cell</td></tr></table>"
        ]
    ]
]
