crates/carta/tests/snapshots/golden_e2e__ipynb__native__code-image.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "plot"
    , [ "cell" , "code" ]
    , [ ( "execution_count" , "5" ) ]
    )
    [ CodeBlock ( "" , [ "python" ] , [] ) "draw()"
    , Div
        ( "" , [ "output" , "display_data" ] , [] )
        [ Para
            [ Image
                ( "" , [] , [] )
                []
                ( "ddd8a63b8957c29356d1015e6040f47158d26c1d.png" , "" )
            ]
        ]
    ]
]
