crates/carta/tests/snapshots/golden_e2e__ipynb__native__definition-marker-fold.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "deffold" , [ "cell" , "markdown" ] , [] )
    [ Para
        [ Str "A"
        , Space
        , Str "line"
        , Space
        , Str "of"
        , Space
        , Str "prose"
        ]
    , Para
        [ Str ":"
        , Space
        , Str "not"
        , Space
        , Str "a"
        , Space
        , Str "definition"
        , Space
        , Str "list"
        , Space
        , Str "in"
        , Space
        , Str "this"
        , Space
        , Str "dialect"
        ]
    ]
]
